@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "20131211.000010"
+#define TAGSISTANT_BUILDNUMBER "20131213.000032"
